// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should prioritize disabled over error styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class="_wrapper_7cd753"
  data-disabled="true"
>
  <label
    class="_label_7cd753"
    for=":ri:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rj:"
      aria-invalid="true"
      class="circuit-1"
      disabled=""
      id=":ri:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should prioritize disabled over warning styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class="_wrapper_7cd753"
  data-disabled="true"
>
  <label
    class="_label_7cd753"
    for=":rk:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rl:"
      class="circuit-1"
      disabled=""
      id=":rk:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render minRows props as rows when passed if rows is auto 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":rq:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rr:"
      class="circuit-1"
      id=":rq:"
      rows="3"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render rows props when passed 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":rm:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rn:"
      class="circuit-1"
      id=":rm:"
      rows="3"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":r6:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":r7:"
      class="circuit-1"
      id=":r6:"
    />
  </div>
  <div
    class="_validation-hint_7cd753"
    id=":r7:"
  >
    Validation hint
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a prefix when passed the prefix prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-2::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-2:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-2:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-2:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":r2:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
      style="width: 24px; height: 24px;"
    />
    <textarea
      aria-describedby=":r3:"
      class="circuit-2"
      id=":r2:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a suffix when passed the suffix prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-2 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":r4:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":r5:"
      class="circuit-1"
      id=":r4:"
    />
    <div
      class="circuit-2"
      style="width: 24px; height: 24px;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with default styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":r0:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":r1:"
      class="circuit-1"
      id=":r0:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with disabled styled when passed the disabled prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class="_wrapper_7cd753"
  data-disabled="true"
>
  <label
    class="_label_7cd753"
    for=":rg:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rh:"
      class="circuit-1"
      disabled=""
      id=":rg:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with invalid styles when passed the invalid prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-danger);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-1:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-1:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-1:not(:focus)::placeholder {
  color: var(--cui-fg-danger);
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-danger-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-danger);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-danger-pressed);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":ra:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rb:"
      aria-invalid="true"
      class="circuit-1"
      id=":ra:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with readonly styles when passed the readonly prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: var(--cui-bg-subtle-disabled);
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":re:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rf:"
      class="circuit-1"
      id=":re:"
      readonly=""
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with valid styles when passed the showValid prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":rc:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rd:"
      class="circuit-1"
      id=":rc:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-warning);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-1:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-1:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-1:not(:focus)::placeholder {
  color: var(--cui-fg-warning);
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-warning-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-warning);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-warning-pressed);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":r8:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":r9:"
      class="circuit-1"
      id=":r8:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render without rows props when passed if rows is auto 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class="_wrapper_7cd753"
>
  <label
    class="_label_7cd753"
    for=":ro:"
  >
    <span
      class="_label-text_7cd753"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-0"
  >
    <textarea
      aria-describedby=":rp:"
      class="circuit-1"
      id=":ro:"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;
